--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.15.2",
     "http": "0.0.0",
+    "mssql": "^4.1.0",
     "path": "^0.12.7",
     "winston": "^2.3.1",
     "winston-syslog": "^1.2.6"
