--- a/config/default.yaml
+++ b/config/default.yaml
@@ -22,12 +22,6 @@ node-eds:
                 level: trace
                 colorize: true
     repositories:
-        - repositoryId: DevSHRA
+        - repositoryId: ObjectStore
           supportedTypes:
-           - symbolicName: HCV_CaseDocuments
-    HCV_CaseDocuments:
-        server: 192.168.177.14
-        database: Yardi
-        user: kofaxbarcode
-        port: 1433
-        password: stored locally
+           - symbolicName: DocumentClass
